--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,14 +4,16 @@ FROM python:3.11-slim
 # Set the working directory
 WORKDIR /app
 
+
+# Copy the requirements file and install dependencies
+COPY requirements.txt .
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
-
-# Copy the requirements file and install dependencies
-COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
