--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,63 @@
+absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.6.2.post1
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 asyncpg==0.30.0
+attrs==24.2.0
+Authlib==1.3.2
+bcrypt==4.1.2
+certifi==2024.8.30
+cffi==1.17.1
 click==8.1.7
+contourpy==1.3.0
+cryptography==43.0.3
+cycler==0.12.1
+dnspython==2.7.0
+email_validator==2.1.2
 fastapi==0.115.2
+fastapi-users==13.0.0
+fastapi-users-db-sqlalchemy==6.0.1
+flatbuffers==24.3.25
+fonttools==4.54.1
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.6
 httptools==0.6.4
+httpx==0.27.2
+httpx-oauth==0.15.1
 idna==3.10
+jax==0.4.35
+jaxlib==0.4.35
+kiwisolver==1.4.7
+makefun==1.15.6
 Mako==1.3.5
 MarkupSafe==3.0.2
+matplotlib==3.9.2
+mediapipe==0.10.18
+ml_dtypes==0.5.0
+numpy==1.26.4
+opencv-contrib-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+opt_einsum==3.4.0
+packaging==24.2
+pillow==11.0.0
+protobuf==4.25.5
+pwdlib==0.2.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+PyJWT==2.8.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.9
 PyYAML==6.0.2
+scipy==1.14.1
+sentencepiece==0.2.0
+six==1.16.0
 sniffio==1.3.1
+sounddevice==0.5.1
 SQLAlchemy==2.0.36
 starlette==0.40.0
 typing_extensions==4.12.2
