--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,13 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "redux": "^5.0.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
@@ -35,6 +32,7 @@
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.20.6",
     "@types/estree": "^1.0.6",
+    "@types/node": "^22.13.11",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
