--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,30 +1,8 @@
-# Use the official Python image with a slim variant
-FROM python:3.11-slim
-
-# Set the working directory
+FROM python:3.10-slim
 WORKDIR /app
-
-
-# Copy the requirements file and install dependencies
+COPY ./app /app/app
+COPY app/main.py .
 COPY requirements.txt .
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    libpq-dev \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
-    && rm -rf /var/lib/apt/lists/*
-
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the rest of the application code
-COPY . .
-
-# Expose the port your application runs on
 EXPOSE 8000
-
-# Set environment variables (if any)
-ENV PYTHONUNBUFFERED=1
-
-# Command to run on container start
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
