--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 aiofiles==24.1.0
+uvicorn== 0.34.0
 authlib==1.5.1
 certifi==2024.12.14
 databases==0.9.0
@@ -7,11 +8,12 @@ fer==22.5.1
 ffmpeg==1.4
 joblib==1.4.2
 librosa==0.11.0
-mediapipe==0.10.21
-numpy==2.2.4
+mediapipe==0.10.18
+numpy
 openai==1.68.2
 opencv_python==4.11.0.86
 pandas==2.2.3
 python-dotenv==1.0.1
 SQLAlchemy==2.0.39
 starlette==0.46.1
+itsdangerous
